--- a/ssmlt.template
+++ b/ssmlt.template
@@ -1,3 +1,12 @@
-"server": "0.0.0.0",
-"timeout": 60,
-"method": "aes-256-cfb",
+"server":"0.0.0.0",
+"server_ipv6":"[::]",
+"timeout":120,
+"method":"chacha20-ietf",
+"protocol":"auth_aes128_md5",
+"protocol_param":"",
+"obfs":"http_simple",
+"obfs_param":"",
+"redirect":"",
+"dns_ipv6":false,
+"fast_open":false,
+"workers":1,
